3.0.22
	+ Remove useless chown workaround
	+ Add object exists check listing group members
	+ Fixed the way we propagate optional fields, removing it when empty
	+ Decode givenName, sn and description before propagating it from OpenLDAP
	  to Samba so it doesn't fail due to encoding issues
	+ Don't put duplicate bridge interfaces in smb.conf
	+ Don't allow a share with file system root as path
	+ Explicitly set firewall version dependency in control file
3.0.21
	+ Adapt firewall rules to new accept chains
	+ Add config key to skip writting homeDirectory and homeDrive attribute
	+ Do not store in samba_access table 4 records each 10s when antivirus
	  daemon is not running
	+ Use krb5 keys on new users when plain password not available
3.0.20
	+ Fix SIDs to ignore list, add missing end of line character in regular
	  expressions
	+ NetBIOS computer name is now updated before reprovision and after
	  hostname change
3.0.19
	+ Fix id mapping for users and groups added by the s4sync daemon
3.0.18
	+ Fix hostname change when having Samba installed: was trying to create
	  again Administrator user, now we just update the credentials, ignore
	  existing groups
3.0.17
	+ New join_vista_with_guest_shares option in /etc/zentyal/samba.conf to
	  allow join of Windows Vista machines if guest shares are enabled
	+ New sync_disabled_users option in /etc/zentyal/samba.conf to sync
	  users with a disabled account in s4sync
	+ New s4sync-groups.ignore file to avoid sync internal groups to LDAP
3.0.16
	+ Workaround with retries for the chown __USERS__ bug
	+ Hide sync with cloud options in shares list if remoteservices
	  is not installed
	+ Setup filesystem now writes a valid fstab file even if the filesystem
	  does not have any mount option
	+ Remove idmap_ldb:use_rf2307 option unnecessary with Samba 4.0.5
	+ Clearer error messages when EBox::LDB::safeConnect fails
	+ Raise exception if during the provision either the domain