@@ -138,17 +138,6 @@ treat_contacts_as_users = no
 # Uncomment this if you want to sync also users with a disabled account
 #sync_disabled_users = yes
 
-# This is a temporary workaround for these Samba 4 bugs:
-#
-#   https://bugzilla.samba.org/show_bug.cgi?id=9866
-#   https://bugzilla.samba.org/show_bug.cgi?id=9867
-#
-# Uncomment this if you have guest shares enabled and want to join
-# Windows Vista computers to the domain. Please note that completely
-# anonymous share access will not work if you don't provide any valid
-# domain credentials, but at least you will be able to join.
-#join_vista_with_guest_shares = yes
-
 # Uncomment this if you want to skip setting the home directory of the
 # users while saving changes
 #unmanaged_home_directory = yes
