@@ -15,7 +15,7 @@ Breaks: ebox-samba (<< 2.0.100), zentyal-printers (<< 3.0.2)
 Depends: zentyal-core (>= 3.0.16), zentyal-core (<< 3.0.100), zentyal-network,
          zentyal-firewall (>= 3.0.5), zentyal-users (>= 3.0.14), zentyal-dns (>= 3.0.7),
          rsync, acl, libdate-calc-perl, libnet-dns-perl, libauthen-krb5-easy-perl,
-         libclamav-client-perl, libnet-ntp-perl, samba4 (>= 4.0.3-zentyal1),
+         libclamav-client-perl, libnet-ntp-perl, samba4 (>= 4.0.13-zentyal2),
          ${misc:Depends}
 Description: Zentyal - File Sharing and Domain Services
  Zentyal is a Linux small business server that can act as
