@@ -23,19 +23,9 @@
 
     $prefix => 'Zentyal'
     $backup_path => '/tmp'
-
-    $guestAccess => 0
-    $guestAccount => 'nobody'
 </%args>
 <%init>
 use EBox::Gettext;
-use EBox::Samba;
-use EBox::Config;
-
-my $customAuthMethodsForGuest = 'guest sam_ignoredomain';
-if (EBox::Config::boolean('join_vista_with_guest_shares')) {
-    $customAuthMethodsForGuest .= ' samba4';
-}
 </%init>
 [global]
     workgroup = <% $workgroup %>
@@ -56,13 +46,6 @@ if (EBox::Config::boolean('join_vista_with_guest_shares')) {
 
     log level = 3
     log file = /var/log/samba/samba.log
-
-% if ($guestAccess) {
-    guest ok = yes
-    map to guest = bad user
-    guest account = <% $guestAccount %>
-    auth methods = <% $customAuthMethodsForGuest %>
-% }
 
 % unless ($print) {
     load printers = no
@@ -130,6 +113,9 @@ if (EBox::Config::boolean('join_vista_with_guest_shares')) {
     read only = No
     force create mode = 0660
     force directory mode = 0660
+% if ($share->{guest}) {
+    guest ok = Yes
+% }
 % my $av = ($antivirus xor defined($antivirus_exceptions->{'share'}->{$share->{'share'}}));
 % my $rb = ($recycle xor defined($recycle_exceptions->{'share'}->{$share->{'share'}}));
 % my $objects = 'acl_xattr full_audit';
